recursion.lessons.recursion.koch.HexaKoch.scala.error
HexaKoch:2: error: Missing closing brace `}' assumed here
def drawCurve(levels:Int, length:Double) {
^HexaKoch:5: error: expected class or object definition
def hexaKoch(levels:Int, length:Double) {
^